# Tasker

./: CMakeLists.txt  LICENSE  README.md  install.sh  main.cpp  task.cpp  task.h  taskclass.cpp  taskclass.h  taskslist.cpp  taskslist.h
